# python-project-52

./: .env.sample  .gitignore  Makefile  PLAN.md  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: django.yml
locale/ru/LC_MESSAGES/: django.po
task_manager/: base_views.py  context_processors.py  mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  create.html  delete.html  index.html  nav.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
templates/: base.html  form.html  index.html  login.html
templates/statuses/: delete.html  index.html
templates/users/: delete.html  index.html
