[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Evgeniy Slizh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
flake8 = "^7.1.1"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
